--- a/hlh.html
+++ b/hlh.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <p>
-            hatran4298@gmail.com
+            hatran4298@gmail.com. ya cố lên nha
         </p>
     </body>
 </html>
